--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      #screen {
+        background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, blue 0) 0
+          0/80px 80px;
+      }
+    </style>
   </head>
   <body>
     <h1>Pointer Deconstruction</h1>
