--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <title>Document</title>
     <style>
       #screen {
-        background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, blue 0) 0
-          0/80px 80px;
+        position: relative;
+        width: 1280px;
+        height: 720px;
+        background-color: azure;
+        -background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, blue 0)
+          0 0/80px 80px;
+      }
+      #screen div {
+        position: absolute;
+        border: 1px solid red;
+        box-sizing: border-box;
       }
     </style>
   </head>
   <body>
     <h1>Pointer Deconstruction</h1>
 
-    <div
-      style="width: 1280px; height: 720px; border: 5px solid red"
-      id="screen"
-    ></div>
+    <div id="screen"></div>
 
     <script src="script.js"></script>
   </body>
