Added photo credit

--- a/index.html
+++ b/index.html
@@ -4,26 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <script
+      src="https://kit.fontawesome.com/57a8a8c892.js"
+      crossorigin="anonymous"
+    ></script>
+
     <style>
+      body,
+      html {
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        font-family: "Lora", serif;
+        color: #fff;
+      }
       #screen {
-        position: relative;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        -margin: auto;
         width: 1280px;
         height: 720px;
-        background-color: azure;
         -background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, blue 0)
           0 0/80px 80px;
       }
       #screen div {
         position: absolute;
-        border: 1px solid red;
+        border: 1px solid rgba(255, 255, 255, 0.25);
         box-sizing: border-box;
+      }
+      #container {
+        height: 100%;
+        position: relative;
+      }
+      #credit {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        padding-bottom: 10px;
+        text-align: center;
+      }
+      a:link,
+      a:hover,
+      a:visited,
+      a:active {
+        text-decoration: none;
+        font-size: 16px;
       }
     </style>
   </head>
   <body>
-    <h1>Pointer Deconstruction</h1>
+    <div id="container">
+      <div id="screen"></div>
+    </div>
 
-    <div id="screen"></div>
+    <div id="credit">
+      <a href="javascript: return false;" id="credit_link"></a>
+    </div>
 
     <script src="script.js"></script>
   </body>
