--- a/deconstruction.html
+++ b/deconstruction.html
@@ -14,7 +14,6 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <script
       src="https://kit.fontawesome.com/57a8a8c892.js"
       crossorigin="anonymous"
@@ -66,6 +65,7 @@
       a:active {
         text-decoration: none;
         font-size: 16px;
+        color: #fff;
       }
     </style>
   </head>
@@ -75,6 +75,12 @@
     </div>
 
     <div id="credit">
+      <span id="credit_tracking">
+        <i class="fas fa-mouse-pointer"></i> Tracking Mouse
+      </span>
+      <span id="credit_loading">
+        <i class="fas fa-spinner fa-spin"></i> Loading
+      </span>
       <a href="javascript: return false;" id="credit_link"></a>
     </div>
 
