Added Loading animation

--- a/deconstruction.html
+++ b/deconstruction.html
@@ -67,6 +67,9 @@
         font-size: 16px;
         color: #fff;
       }
+      #credit_tracking {
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -76,10 +79,7 @@
 
     <div id="credit">
       <span id="credit_tracking">
-        <i class="fas fa-mouse-pointer"></i> Tracking Mouse
-      </span>
-      <span id="credit_loading">
-        <i class="fas fa-spinner fa-spin"></i> Loading
+        <i class="fas fa-spinner fa-spin"></i> Tracking Mouse
       </span>
       <a href="javascript: return false;" id="credit_link"></a>
     </div>
